Thu Mar  4 00:14:41 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/Resend.pm (post): ack_attach_original uses 'fail', not
 	'reject'.

	* lib/Majordomo.pm (help_start): Typo: site => site_name.

	* setup/setup_func.pl (suggest_crontab): Suggest daily trigger go
 	ten minutes after the hour, so it doesn't overlap the hourly
 	trigger that runs precisely at midnight.

Wed Mar  3 22:18:13 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/CommandProps.pm: Add 'days_since_subscribe' and 'mime' to
 	allowed variables for 'post'.

	* lib/Mj/Resend.pm (_check_poster): New function, do checks based
 	on the person posting the message.  Currently check the number of
 	days since they joined.

1999-03-01  Jason L Tibbitts III  <tibbs@math.uh.edu>

	* files/INDEX.pl: Renamed quote_regexp to quote_pattern.

Mon Mar  1 07:37:52 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* bin/mj_email (forward_to_owner, resend): Allow possible \r when
 	stripping From_ separators.

Sun Feb 28 00:04:02 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/mj_cf_data.pl: Remove all comment entries.

	* files/INDEX.pl: Added all of the variable descriptions.

Sat Feb 27 14:44:15 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Majordomo.pm (config_get_comment): Extract the file from the
 	filespace instead of of getting it from the big variable data
 	structure.  Variable descriptions are now translatable.

	* lib/mj_cf_data.pl: Rename 'quote_regexp' to 'quote_pattern'.

	* lib/Mj/Resend.pm (_check_body): Use quote_pattern.

	* setup/setup_func.pl (suggest_crontab): Doesn't need a domain any
 	longer.

	* installbin: Expand @::DOMAINS in mj_trigger to list of all
 	configured domains.

	* bin/mj_trigger: If not passed -d, loop over all configured
 	domains instead.

	* lib/Mj/Resend.pm (post, _post): Fix typos; site -> site_name.

Fri Feb 26 17:38:38 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>
