@@ -5,7 +5,7 @@ the value of the 'ack_denials_always' variable).
 
 Each element of this array myst be one of the following:
 
-  fail - acks for failed messages will include the original message
+  fail  - acks for failed messages will include the original message
   stall - acks for stalls (confirmations or consultations) will
-    include the original message.
-  any - acks sent for any reason will include the original message.
+          include the original message.
+  all   - acks sent for any reason will include the original message.
