@@ -237,7 +237,8 @@ sub post {
 	);
 
       if (($ok <  0 && $ack_attach->{stall}) ||
-	  ($ok == 0 && $ack_attach->{fail}))
+	  ($ok == 0 && $ack_attach->{fail})  ||
+	  ($ok <= 0 && $ack_attach->{all}))
 	{
 	  $nent->make_multipart;
 	  $nent->attach(Type        => 'message/rfc822',
